add terms of use, gary pic, and update some content to be semi-real

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -55,6 +55,11 @@ body {
 	z-index: 10;
 }
 
+#header-no-float { 
+	background-color: white;
+	font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;
+}
+
 #poster { 
 	background-color: #017890; 
 	color: white; 
