--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -89,67 +89,66 @@
 	<div class="content">
 		<div class="main-section" id="section-returns">
 			<h2>Our Returns</h2>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus faucibus placerat augue quis laoreet. Vestibulum ullamcorper est id nunc bibendum laoreet. Maecenas porttitor nisl commodo risus sodales vestibulum. Donec placerat rhoncus rutrum. Vivamus elit massa, posuere ac rhoncus non, rutrum a tortor. Aliquam rhoncus, dui nec vulputate pretium, nunc purus iaculis magna, vitae convallis sem eros in tortor. Etiam tristique sapien urna.
-			<br /><br />
-			Praesent vulputate tincidunt lectus in dictum. Nulla ut purus ac risus pulvinar vestibulum sed sed nibh. Quisque eget elit vitae nibh dignissim fringilla at eget ipsum. Integer ut dictum tellus. Donec et lacus dictum neque hendrerit vulputate. Nulla a nibh et nibh varius sagittis sed sit amet erat. Vestibulum aliquet rhoncus adipiscing. Nam malesuada, magna et tincidunt laoreet, nibh magna dictum erat, nec rhoncus eros tortor eget nisi. Nunc pretium, dui vel tempus scelerisque, leo nibh pellentesque velit, et cursus turpis sem sed odio. Donec in malesuada nibh. Curabitur porta porta arcu vitae imperdiet. Quisque et nulla a dui aliquet varius. Ut iaculis pretium adipiscing. Etiam interdum dictum dolor, sed venenatis libero vulputate interdum. Vivamus quis purus arcu, quis iaculis ipsum.
-			<br /><br />
-			Nam id est est, sed scelerisque sem. Ut ut fermentum turpis. Suspendisse mi lorem, commodo ut aliquet vel, mollis id lacus. Sed fermentum pharetra varius. In non massa tellus, id cursus est. In rhoncus, lectus sed commodo malesuada, enim mauris vehicula leo, quis viverra est mi id quam. Nunc facilisis felis nec enim dignissim venenatis. Duis non eros erat. Proin odio nulla, consectetur et tempus ac, tempus vitae magna. Aliquam consectetur nisl a lectus vulputate ultricies. Morbi in adipiscing sem. Fusce pharetra, risus eu dapibus sagittis, sapien odio placerat neque, ut lobortis lacus nunc ac enim. Nam sagittis sem dignissim diam vulputate vitae fermentum enim malesuada.
+			<p>
+			Our returns are awesome!  Check out these charts.  EVERYONE loves charts...
+			</p>
+			<p>
+			{CHARTS}
+			</p>
+			<p>
+			See, I told you the charts were cool.
+			</p>
 		</div>
 		<div class="main-section" id="section-how">
 			<h2>How It Works</h2>
-			Donec condimentum aliquet nulla. Fusce vestibulum tincidunt urna, et fringilla nunc adipiscing id. Suspendisse vel magna non nulla hendrerit feugiat. Vestibulum tristique feugiat dui sit amet egestas. Nam semper elit in nisl dignissim adipiscing. Suspendisse potenti. Sed cursus varius ullamcorper. Sed nisi risus, vestibulum id auctor ut, ultricies sit amet massa. Vivamus vel commodo erat. Duis eget nunc orci.
-			<br /><br />
-			Sed pulvinar sapien a lacus vestibulum aliquam. In sapien turpis, porttitor non sodales et, pretium sed purus. Donec arcu felis, tincidunt quis rutrum a, tempor et nisl. Curabitur ultrices feugiat suscipit. Morbi lobortis aliquam mi non congue. Vivamus id elit vitae sem dapibus vestibulum. Suspendisse fermentum, magna nec luctus cursus, tortor leo laoreet velit, vel semper mauris turpis eget metus. Etiam euismod, risus at rhoncus vulputate, libero velit congue massa, ac consequat neque purus non felis. Phasellus non nulla erat, id lacinia felis. Sed tristique lobortis interdum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed nisi diam, fringilla quis scelerisque ac, laoreet euismod sapien. Sed quis rhoncus magna.
-			<br /><br />
-			Aenean a orci sit amet urna tempor laoreet nec a massa. Aliquam erat volutpat. Praesent sed velit sed nibh fringilla ullamcorper. Etiam nulla odio, pretium eget varius ut, sagittis id nulla. Sed orci leo, condimentum aliquet suscipit in, faucibus sit amet massa. Proin sollicitudin orci et lorem placerat pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas condimentum sem ac diam iaculis ac congue erat laoreet. Duis hendrerit lobortis ante, ac egestas nisi tristique sed. Pellentesque malesuada, tortor in eleifend dapibus, quam magna placerat felis, tempus facilisis ante augue vel velit. Phasellus suscipit tortor ac nibh condimentum quis tincidunt mi vulputate.
+			<p>
+			You've probably heard about the difference between stocks and bonds, and in particular that stocks are "risker."  Well, generally speaking, that is true, and that's a core part of how this works...
+			</p>
+			<p>
+			First, we measure and track market risk.  Then, when the market risk is high, we put more money into bonds -- this is to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks -- this is so you maximize gains when the stock market is doing well.  And the extra secret sauce: we tailor this to the invesment options available under the Microsoft 401k plan.
+			</p>
 		</div>
 		<div class="main-section" id="section-what">
 			<h2>What Do I Do</h2>
-			Donec condimentum aliquet nulla. Fusce vestibulum tincidunt urna, et fringilla nunc adipiscing id. Suspendisse vel magna non nulla hendrerit feugiat. Vestibulum tristique feugiat dui sit amet egestas. Nam semper elit in nisl dignissim adipiscing. Suspendisse potenti. Sed cursus varius ullamcorper. Sed nisi risus, vestibulum id auctor ut, ultricies sit amet massa. Vivamus vel commodo erat. Duis eget nunc orci.
-			<br /><br />
-			Sed pulvinar sapien a lacus vestibulum aliquam. In sapien turpis, porttitor non sodales et, pretium sed purus. Donec arcu felis, tincidunt quis rutrum a, tempor et nisl. Curabitur ultrices feugiat suscipit. Morbi lobortis aliquam mi non congue. Vivamus id elit vitae sem dapibus vestibulum. Suspendisse fermentum, magna nec luctus cursus, tortor leo laoreet velit, vel semper mauris turpis eget metus. Etiam euismod, risus at rhoncus vulputate, libero velit congue massa, ac consequat neque purus non felis. Phasellus non nulla erat, id lacinia felis. Sed tristique lobortis interdum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed nisi diam, fringilla quis scelerisque ac, laoreet euismod sapien. Sed quis rhoncus magna.
-			<br /><br />
-			Aenean a orci sit amet urna tempor laoreet nec a massa. Aliquam erat volutpat. Praesent sed velit sed nibh fringilla ullamcorper. Etiam nulla odio, pretium eget varius ut, sagittis id nulla. Sed orci leo, condimentum aliquet suscipit in, faucibus sit amet massa. Proin sollicitudin orci et lorem placerat pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas condimentum sem ac diam iaculis ac congue erat laoreet. Duis hendrerit lobortis ante, ac egestas nisi tristique sed. Pellentesque malesuada, tortor in eleifend dapibus, quam magna placerat felis, tempus facilisis ante augue vel velit. Phasellus suscipit tortor ac nibh condimentum quis tincidunt mi vulputate.
+			<p>
+			It's so easy!  Every month, we'll send you our recommendation for asset allocations.  We'll tell you step-by-step how to log into your account and update your 401k account allocations to maximize performance and minimize risk.
+			</p>
 		</div>		
 		<div class="main-section" id="section-who">
 			<h2>Who We Are</h2>
 			<div class="three-column-div three-column-margin">
-			<div class="picbox">Joe's Pic</div><br />
-				Joe is a guy from Microsoft.  He is a product guy and passionate about investment.  He has 3 kids and a playgroun in his backyard that rivals any public park.  He is cool.
-				<br /><br />
-				Pellentesque congue arcu a odio ornare dignissim. Integer bibendum posuere leo, vitae dictum nunc pulvinar a. Morbi vehicula velit velit, id vulputate justo. Pellentesque vel mi sit amet dui placerat ornare. Integer ut nisl dolor. Nullam viverra ullamcorper ultricies.
+			<div class="picbox">Joe's Pic</div>
+				<p>
+				Joe is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.
+				</p>
 			</div>
 			<div class="three-column-div three-column-margin">
-			<div class="picbox">Gary's Pic</div><br />
-				Gary is also a guy from Microsoft.  He is a product guy and a web development nerd.  He is only somewhat cool. 
-				<br /><br />
-				Sed magna dolor, euismod quis venenatis non, molestie nec enim. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum posuere, ligula rutrum vehicula congue, augue elit luctus elit, sed ullamcorper enim ante eu leo.
+			<div><img src="assets/VestMe-Gary.jpg" alt="Gary" /></div>
+				<p>
+				Gary is another Microsoftie product guy.  He's also web development nerd and he'll talk your ear off about the benefits of a plant-based diet.
+				</p>
 			</div>
 			<div class="three-column-div">
-			<div class="picbox">Xavier's Pic</div><br />
-				Xavier is an investment guru.  He is a CFA and worked for many years as an analyst building financial models.  He is also cool.
-				<br /><br />
-				Sed vitae mauris erat. Aenean ac massa et mi dapibus ultrices tempor a mi. Curabitur in justo magna, sed molestie arcu. Vestibulum rutrum purus ut orci egestas vitae tempus est vehicula. Nullam fermentum blandit nisl, vitae euismod neque blandit sed.
-			</div>		
+			<div class="picbox">Xavier's Pic</div>
+				<p>
+				Xavier is an investment guru.  He is a CFA and worked for many years as an analyst building financial models.
+				</p>
+			</div>
 		</div>
 		<div class="main-section clear-div" id="section-vision">
 			<h2>Vision</h2>
-			Quisque rutrum quam non nisi luctus dignissim. Sed suscipit eleifend tellus, non venenatis velit imperdiet eget. Mauris sed ipsum at massa scelerisque imperdiet. Aliquam erat volutpat. Suspendisse id nulla ut augue rhoncus tincidunt eu vitae tellus. Aliquam vitae massa ipsum, quis blandit nisi. Nunc commodo pulvinar tortor ut feugiat. Duis magna dolor, placerat nec hendrerit nec, congue volutpat mi. Donec justo nulla, condimentum non auctor in, rutrum ac sem. Pellentesque at augue nibh.
-			<br /><br />
-			Aliquam erat volutpat. Quisque lobortis justo et eros vulputate sed convallis orci rutrum. Donec sem leo, venenatis vel vehicula id, adipiscing ut enim. Proin iaculis consectetur risus vitae congue. Donec vitae arcu sapien, suscipit tincidunt velit. Vivamus sit amet mauris urna, id commodo velit. Etiam laoreet nisl eget quam pretium luctus vel et tellus.
-			<br /><br />
-			Vestibulum porta bibendum leo, eget bibendum felis eleifend at. Aliquam rhoncus libero ac nibh ultricies molestie. Ut rutrum mauris et libero dapibus luctus. Pellentesque et quam et nisl rhoncus fringilla. Mauris ultricies metus neque, vel congue urna. Donec vehicula sagittis nisi, vel mollis felis porttitor et. Suspendisse vitae ante eget eros sagittis viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat accumsan erat, eget scelerisque diam bibendum sit amet. Sed a odio tincidunt turpis ornare gravida ultricies id tellus. Ut pulvinar condimentum diam nec scelerisque. Quisque lobortis neque eget nibh sollicitudin vehicula.
-			<br /><br />
-			Quisque rutrum quam non nisi luctus dignissim. Sed suscipit eleifend tellus, non venenatis velit imperdiet eget. Mauris sed ipsum at massa scelerisque imperdiet. Aliquam erat volutpat. Suspendisse id nulla ut augue rhoncus tincidunt eu vitae tellus. Aliquam vitae massa ipsum, quis blandit nisi. Nunc commodo pulvinar tortor ut feugiat. Duis magna dolor, placerat nec hendrerit nec, congue volutpat mi. Donec justo nulla, condimentum non auctor in, rutrum ac sem. Pellentesque at augue nibh.
-			<br /><br />
-			Aliquam erat volutpat. Quisque lobortis justo et eros vulputate sed convallis orci rutrum. Donec sem leo, venenatis vel vehicula id, adipiscing ut enim. Proin iaculis consectetur risus vitae congue. Donec vitae arcu sapien, suscipit tincidunt velit. Vivamus sit amet mauris urna, id commodo velit. Etiam laoreet nisl eget quam pretium luctus vel et tellus.
+			<p>
+			Our vision is to help people get the most out of the 401k accounts.
+			</p>
 		</div>
 	</div>
 
 	<div id="footer">
 		<div class="content">
 			<h4>Footer</h4>
-			<p>Aenean molestie libero vehicula purus feugiat rhoncus. Quisque id sem nibh, quis mattis nibh. Suspendisse potenti. Aenean varius quam ac lectus malesuada vel elementum libero ultricies. Nullam pretium nulla ac erat tempus ut vehicula est sagittis. Cras ullamcorper mauris a velit ultrices bibendum. Maecenas id ligula massa, ac mollis arcu.</p>
+			<p>
+			We are NOT investment advisors.  See our <a href="terms">terms</a>.
+			</p>
 		</div>
 	</div>
 </div>
