add some charts and content

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,7 +46,7 @@
 
 		</div>
 
-		<div class="chartbox1">Some initial chart goes here?  Do we actually need a chart here if we have a chart section below?  Maybe we just need a stock image of a person who is super happy because he's maximing the potential of his 401k... :-)</div>
+		<div><img width="280" height="200" src="assets/Growth_vs_SP500.png" /></div>
 
 		<% if (notice =~ /SIGNUP_ERROR/) == 0 %>
 		<div class="error-div">
@@ -92,12 +92,7 @@
 			<p>
 			Our returns are awesome!  Check out these charts.  EVERYONE loves charts...
 			</p>
-			<p>
-			{CHARTS}
-			</p>
-			<p>
-			See, I told you the charts were cool.
-			</p>
+			<img class="chart-img" width="400" src="assets/Drawdown_vs_SP500.png" />
 		</div>
 		<div class="main-section" id="section-how">
 			<h2>How It Works</h2>
@@ -113,6 +108,7 @@
 			<p>
 			It's so easy!  Every month, we'll send you our recommendation for asset allocations.  We'll tell you step-by-step how to log into your account and update your 401k account allocations to maximize performance and minimize risk.
 			</p>
+			<p><a href="#">See Step-by-Step Instructions</a></p>
 		</div>		
 		<div class="main-section" id="section-who">
 			<h2>Who We Are</h2>
@@ -138,7 +134,28 @@
 		<div class="main-section clear-div" id="section-vision">
 			<h2>Vision</h2>
 			<p>
-			Our vision is to help people get the most out of the 401k accounts.
+			We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are
+setting out to build a product that we want first, because we think it will help friends and coworkers.
+</p><p>
+Advisors resign to push only one type of investment strategy for money in 401ks. They push Modern
+Portfolio Theory and their passive portfolios as the only solutions. These strategies require that
+investors select a level of risk as if risk equals more reward. Under Modern Portfolio Theory investors
+need to increase risk to increase returns eventually causing the strategy and investor to crack in major
+market meltdowns (remember 2008?).
+</p><p>
+Online as well as paid advisors don’t offer guidance on 401k plans because there is no way for them
+to monetize the management of money held in a 401k. As such there are limited strategies and help
+provided to participants of 401ks.
+</p><p>
+We believe in an alternative and better way of investing our money in our 401k. We believe risk should
+be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds
+(stable) depending on the market conditions.
+</p><p>
+We developed an algorithm based on proven risk management strategies utilized by complex hedge
+fund managers worldwide. We believe in its ability to control the ups and downs of the market while
+also giving us a good return over the long run.
+</p><p>
+We will give monthly rebalance “blueprints” in the form of an email to all subscribers.
 			</p>
 		</div>
 	</div>
@@ -147,8 +164,9 @@
 		<div class="content">
 			<h4>Footer</h4>
 			<p>
-			We are NOT investment advisors.  See our <a href="terms">terms</a>.
+			We are NOT investment advisors.  See our <a href="terms">Terms</a>.
 			</p>
+			<p><a href="#">Contact Us</a> | <a href="#">Foo</a> | <a href="#">Help</a></p>
 		</div>
 	</div>
 </div>
