--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,10 +8,10 @@
 		<div id="navbar">
 			<a id="top-link-signup" href="#" onclick="scroll_to_top()">Sign Up</a> |
 			<a id="top-link-returns" href="#" onclick="top_link_scroll('returns')">Our Returns</a> |
-			<a id="top-link-how" href="#" href="#" onclick="top_link_scroll('how')">How It Works</a> |
-			<a id="top-link-what" href="#" href="#" onclick="top_link_scroll('what')">What Do I Do</a> |
+			<a id="top-link-how" href="#" onclick="top_link_scroll('how')">How It Works</a> |
+			<a id="top-link-what" href="#" onclick="top_link_scroll('what')">What Do I Do</a> |
 			<a id="top-link-who" href="#" onclick="top_link_scroll('who')">Who We Are</a> |
-			<a id="top-link-vision" href="#" href="#" onclick="top_link_scroll('vision')">Vision</a>
+			<a id="top-link-vision" href="#" onclick="top_link_scroll('vision')">Vision</a>
 		</div>
 
 		<script>
@@ -22,7 +22,9 @@
 			$("html, body").animate(
 				{ scrollTop: $('#section-' + link_target).offset().top - 70 }, 1000);
 		}
-
+	  	function handle_hash() {
+	  		top_link_scroll(window.location.hash.substring(1));
+  		}
 		$("#navbar a").click(function(event) {
 		  event.preventDefault();
 		});
