--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -1,167 +1,208 @@
-<div id="header-no-float">
+<div id="header">
 	<div class="content">
 		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
 			<div id="logo-line-1">msft401k</div>
 			<div id="logo-line-2">by Vest Me</div>			
 		</div>
+
+		<div id="navbar">
+			<a id="top-link-signup" href="/">Sign Up</a> |
+			<a id="top-link-returns" href="/#returns">Our Returns</a> |
+			<a id="top-link-how" href="/#how">How It Works</a> |
+			<a id="top-link-what" href="/#what">What Do I Do</a> |
+			<a id="top-link-who" href="/#who">Who We Are</a> |
+			<a id="top-link-vision" href="/#vision">Vision</a>
+		</div>
+
+		<script>
+	  	function handle_hash() {
+  			// nothing to do for this page
+  		}
+		$("#navbar a").click(function(event) {
+		  	//event.preventDefault();
+		});
+		</script>
+
 	</div>
 </div>
 
-<div class="content">
-	<h1>Terms of Service</h1>
+<div id="poster">
+	<div class="content">
+		<h1>Terms of Service</h1>
+	</div>
+</div>
 
-	<p>The following terms and conditions govern your use of MSFT401k.com, its
-	products and services (the “Website”).</p>
+<div id="main-terms">
+	<div class="content">
+		<p><em>Effective as of March 1, 2013</em></p>
 
-	<p>Please read this entire Terms of Service document (the “Agreement”)
-	carefully before using the Website. The Agreement may be modified by the
-	Website from time to time and such modifications will be binding on you
-	when placed online.</p>
+		<h2>By visiting this site, you accept our terms</h2>
 
-	<h2>In General</h2>
+		<p>The use of this website is subject to the following terms of use and the conditions of our privacy policy. By visiting this website you are acknowledge that you have read, understood and agree to these. We may update these policies from time to time and it is your responsibility to check for updates.</p>
 
-	<p> The information provided at this site is informational only
-	and should not be used for replacement of investment advice from a
-	licensed investment professional. Information provided by the Website
-	is believed to be reliable when posted and is for informational purposes
-	only. Every effort has been made to ensure that the material contained
-	herein is accurate at the time of publication. The Website cannot guarantee
-	its accuracy or completeness and accepts no responsibility for any loss
-	arising from any use of or reliance on the information contained herein.
-	The material on this site, including any opinions expressed herein, are
-	subject to change without notice. The Website does not represent that the
-	securities, products, or services discussed are suitable or appropriate for all
-	investors.</p>
+		<p>The following terms and conditions govern your use of MSFT401k.com, its
+		products and services (the “Website”).</p>
 
-	<p>The Website reserves the right to modify from time to time, or discontinue,
-	temporarily or permanently, any or all of its services with or without
-	notice. Content and services may be removed and discarded at any time for
-	any reason.</p>
+		<p>Please read this entire Terms of Service document (the “Agreement”)
+		carefully before using the Website. The Agreement may be modified by the
+		Website from time to time and such modifications will be binding on you
+		when placed online.</p>
 
-	<p>Nothing herein should be read to constitute or be considered as an offer or
-	solicitation by MSFT401k.com.com, its principal Vest Me, LLC, associates
-	or affiliates as an offer to sell or a solicitation to buy securities to any
-	person residing in the United States of America or in any other jurisdiction
-	in which such an offer or solicitation is unlawful. The information is
-	not intended for distribution to, or use by, any person or entity in any
-	jurisdiction or country where such distribution or use would be contrary to
-	law or regulation, or which would subject the Website to any registration
-	requirement within such jurisdiction or country.</p>
+		<h2>In General</h2>
 
-	<h2>Scope of Services </h2>
+		<p> The information provided at this site is informational only
+		and should not be used for replacement of investment advice from a
+		licensed investment professional. Information provided by the Website
+		is believed to be reliable when posted and is for informational purposes
+		only. Every effort has been made to ensure that the material contained
+		herein is accurate at the time of publication. The Website cannot guarantee
+		its accuracy or completeness and accepts no responsibility for any loss
+		arising from any use of or reliance on the information contained herein.
+		The material on this site, including any opinions expressed herein, are
+		subject to change without notice. The Website does not represent that the
+		securities, products, or services discussed are suitable or appropriate for all
+		investors.</p>
 
-	<p>Information found on the Website is not intended to
-	replace or provide legal, accounting, investment or tax advice, and should
-	not be relied upon in that regard. Information on this site is for educational
-	purposes only.</p>
+		<p>The Website reserves the right to modify from time to time, or discontinue,
+		temporarily or permanently, any or all of its services with or without
+		notice. Content and services may be removed and discarded at any time for
+		any reason.</p>
 
-	<p>MSFT401k.com and it’s principal, Vest Me, LLC, is not registered in any
-	jurisdiction as a securities broker, dealer, investment advisor or CTA.
-	Vest Me, LLC does not provide investment advice based on personal
-	information each client submits through the Website. Vest Me, LLC does
-	not provide trading advice based on, or tailored to, the commodity interest
-	or cash market positions or other circumstances or characteristics of
-	particular clients.</p>
+		<p>Nothing herein should be read to constitute or be considered as an offer or
+		solicitation by MSFT401k.com.com, its principal Vest Me, LLC, associates
+		or affiliates as an offer to sell or a solicitation to buy securities to any
+		person residing in the United States of America or in any other jurisdiction
+		in which such an offer or solicitation is unlawful. The information is
+		not intended for distribution to, or use by, any person or entity in any
+		jurisdiction or country where such distribution or use would be contrary to
+		law or regulation, or which would subject the Website to any registration
+		requirement within such jurisdiction or country.</p>
 
-	<p>The Website offers services limited to those allowed by:</p>
+		<h2>Scope of Services </h2>
 
-	<p>The Investment Advisers Act of 1940 as a bona fide financial publication
-	of general and regular circulation that is not primarily a vehicle for
-	distributing investment advice; and, the Commodity Futures Trading
-	Commission Rule 4.14(a)(9) as commodity trading advisors that provide
-	standardized advice by means of media such as newsletters, prerecorded
-	telephone newslines, Internet web sites, and non-customized computer
-	software.</p>
+		<p>Information found on the Website is not intended to
+		replace or provide legal, accounting, investment or tax advice, and should
+		not be relied upon in that regard. Information on this site is for educational
+		purposes only.</p>
 
-	<h2>Performance Record</h2>
+		<p>MSFT401k.com and it’s principal, Vest Me, LLC, is not registered in any
+		jurisdiction as a securities broker, dealer, investment advisor or CTA.
+		Vest Me, LLC does not provide investment advice based on personal
+		information each client submits through the Website. Vest Me, LLC does
+		not provide trading advice based on, or tailored to, the commodity interest
+		or cash market positions or other circumstances or characteristics of
+		particular clients.</p>
 
-	<p> Individuals or entities that post promotional
-	material designed to increase paid membership are subject to rigorous
-	rules set out by regulatory bodies such as the SEC, NFA and CFTC. NFA
-	Compliance Rule 2-29 places certain limitations on the use of past or
-	projected performance in communications with the public. CFTC Rules
-	4.41(b)(1), 4.35(a)(6)(i) and 4.35(a)(7)(i) govern certain performance
-	presentations.</p>
+		<p>The Website offers services limited to those allowed by:</p>
 
-	<p>The Website does not keep or post a record of MSFT401k.com’s or Vest
-	Me, LLC’s trades for public scrutiny.</p>
+		<p>The Investment Advisers Act of 1940 as a bona fide financial publication
+		of general and regular circulation that is not primarily a vehicle for
+		distributing investment advice; and, the Commodity Futures Trading
+		Commission Rule 4.14(a)(9) as commodity trading advisors that provide
+		standardized advice by means of media such as newsletters, prerecorded
+		telephone newslines, Internet web sites, and non-customized computer
+		software.</p>
 
-	<p>Any and all trading system performance results posted to the Website
-	is subject to disclosure document requirements in Part 4 of the CFTC’s
-	regulations, specifically, Section 4.41:</p>
+		<h2>Performance Record</h2>
 
-	<p>Hypothetical or simulated performance results have certain inherent
-	limitations. Unlike an actual performance record, simulated results do
-	not represent actual trading. Also, since the trades have not actually been
-	executed, the results may have under-or over-compensated for the impact,
-	if any, of certain market factors, such as lack of liquidity. Simulated trading
-	programs in general are also subject to the fact that they are designed with
-	the benefit of hindsight. No representation is being made that any account
-	will or is likely to achieve profits or losses similar to those shown.</p>
+		<p> Individuals or entities that post promotional
+		material designed to increase paid membership are subject to rigorous
+		rules set out by regulatory bodies such as the SEC, NFA and CFTC. NFA
+		Compliance Rule 2-29 places certain limitations on the use of past or
+		projected performance in communications with the public. CFTC Rules
+		4.41(b)(1), 4.35(a)(6)(i) and 4.35(a)(7)(i) govern certain performance
+		presentations.</p>
 
-	<p>Conflict of Interest Market analysis and trading tools featured at the
-	Website are based on MSFT401k.com’s investment and trading strategies.</p>
+		<p>The Website does not keep or post a record of MSFT401k.com’s or Vest
+		Me, LLC’s trades for public scrutiny.</p>
 
-	<p>All statements made represent the opinion of MSFT401k.com and Vest Me,
-	LLC unless otherwise identified.</p>
+		<p>Any and all trading system performance results posted to the Website
+		is subject to disclosure document requirements in Part 4 of the CFTC’s
+		regulations, specifically, Section 4.41:</p>
 
-	<p>Although the information published by the Website has been derived
-	from sources (end of day prices) that are believed to be reliable, they
-	are not always necessarily complete and cannot be guaranteed. Neither
-	MSFT401k.com.com nor any of its principals and associates shall have any
-	liability for any loss sustained by anyone who has relied on the information
-	published.</p>
+		<p>Hypothetical or simulated performance results have certain inherent
+		limitations. Unlike an actual performance record, simulated results do
+		not represent actual trading. Also, since the trades have not actually been
+		executed, the results may have under-or over-compensated for the impact,
+		if any, of certain market factors, such as lack of liquidity. Simulated trading
+		programs in general are also subject to the fact that they are designed with
+		the benefit of hindsight. No representation is being made that any account
+		will or is likely to achieve profits or losses similar to those shown.</p>
 
-	<p>This service is provided for free as a hobby. From time to time,
-	MSFT401k.com and it’s principal Vest Me, LLC, and it’s principal’s
-	managing members may hold and/or trade positions in securities
-	mentioned. In cases where the position is held at the time of publication,
-	appropriate disclosure is made.</p>
+		<p>Conflict of Interest Market analysis and trading tools featured at the
+		Website are based on MSFT401k.com’s investment and trading strategies.</p>
 
-	<h2>No Liability </h2>
+		<p>All statements made represent the opinion of MSFT401k.com and Vest Me,
+		LLC unless otherwise identified.</p>
 
-	<p>The Website does not make any representations, warranties
-	or guarantees, express or implied, regarding the accuracy or completeness
-	of the information found on this Website. In no case shall the Website,
-	nor any individual directly or indirectly involved with the Website, be
-	responsible for any direct or incidental loss incurred as a result of your use
-	of any information presented on the Website.</p>
+		<p>Although the information published by the Website has been derived
+		from sources (end of day prices) that are believed to be reliable, they
+		are not always necessarily complete and cannot be guaranteed. Neither
+		MSFT401k.com.com nor any of its principals and associates shall have any
+		liability for any loss sustained by anyone who has relied on the information
+		published.</p>
 
-	<p>The information is issued by the Website with the express condition,
-	to which everyone using it accepts, that no obligation, responsibility or
-	liability shall be incurred by MSFT401k.com.com, it’s principal, Vest
-	Me, LLC or any of its officers, directors, members, employees, agents,
-	consultants or licensors. They shall not be liable to any person or entity for
-	any losses, damages, costs or expenses (including, but not limited to, loss
-	of profits, loss of use, direct, indirect, incidental or consequential damages)
-	resulting from any errors in, omissions of or alterations to the information
-	contained herein. The foregoing shall apply regardless of whether a claim
-	arises in contract, tort, negligence, strict liability or otherwise. We are not
-	responsible for any loss or damage whatsoever, whether incidental, special,
-	indirect or consequential, in connection with, caused by or arising from
-	any use of or reliance on the information contained herein.</p>
+		<p>This service is provided for free as a hobby. From time to time,
+		MSFT401k.com and it’s principal Vest Me, LLC, and it’s principal’s
+		managing members may hold and/or trade positions in securities
+		mentioned. In cases where the position is held at the time of publication,
+		appropriate disclosure is made.</p>
 
-	<p>Under no circumstances shall the Website or its software consultants be
-	liable for direct, indirect, special, incidental, or consequential damages
-	resulting from the use, misuse, or inability to use this software, even if the
-	Website has been advised of the possibility of such damages.</p>
+		<h2>No Liability </h2>
 
-	<h2>Privacy Policy </h2>
+		<p>The Website does not make any representations, warranties
+		or guarantees, express or implied, regarding the accuracy or completeness
+		of the information found on this Website. In no case shall the Website,
+		nor any individual directly or indirectly involved with the Website, be
+		responsible for any direct or incidental loss incurred as a result of your use
+		of any information presented on the Website.</p>
 
-	<p>The Website stores no personal information of casual
-	visitors. No special effort is made to track surfing habits. Cookies are used
-	to facilitate member log-on to view secure content.</p>
+		<p>The information is issued by the Website with the express condition,
+		to which everyone using it accepts, that no obligation, responsibility or
+		liability shall be incurred by MSFT401k.com.com, it’s principal, Vest
+		Me, LLC or any of its officers, directors, members, employees, agents,
+		consultants or licensors. They shall not be liable to any person or entity for
+		any losses, damages, costs or expenses (including, but not limited to, loss
+		of profits, loss of use, direct, indirect, incidental or consequential damages)
+		resulting from any errors in, omissions of or alterations to the information
+		contained herein. The foregoing shall apply regardless of whether a claim
+		arises in contract, tort, negligence, strict liability or otherwise. We are not
+		responsible for any loss or damage whatsoever, whether incidental, special,
+		indirect or consequential, in connection with, caused by or arising from
+		any use of or reliance on the information contained herein.</p>
 
-	<p>The Website does not sell, rent, trade or make available our mailing list to
-	any third party, and will not solicit you to purchase, rent, or use any third
-	party goods or services for which we receive an undisclosed commission,
-	fee or reward.</p>
+		<p>Under no circumstances shall the Website or its software consultants be
+		liable for direct, indirect, special, incidental, or consequential damages
+		resulting from the use, misuse, or inability to use this software, even if the
+		Website has been advised of the possibility of such damages.</p>
 
-	<p>This constitutes the Website’s terms of service agreement as of Feb 9th,
-	2013.</p>
+		<h2>Privacy Policy </h2>
 
-	<p>THE WEBSITE MAY MODIFY THIS AGREEMENT AT ANY TIME, AND
-	SUCH MODIFICATIONS SHALL BE EFFECTIVE IMMEDIATELY UPON
-	POSTING OF THE MODIFIED AGREEMENT.</p>
+		<p>The Website stores no personal information of casual
+		visitors. No special effort is made to track surfing habits. Cookies are used
+		to facilitate member log-on to view secure content.</p>
 
+		<p>The Website does not sell, rent, trade or make available our mailing list to
+		any third party, and will not solicit you to purchase, rent, or use any third
+		party goods or services for which we receive an undisclosed commission,
+		fee or reward.</p>
+
+		<p>This constitutes the Website’s terms of service agreement as of Feb 9th,
+		2013.</p>
+
+		<p>THE WEBSITE MAY MODIFY THIS AGREEMENT AT ANY TIME, AND
+		SUCH MODIFICATIONS SHALL BE EFFECTIVE IMMEDIATELY UPON
+		POSTING OF THE MODIFIED AGREEMENT.</p>
+
+	</div>
+
+	<div id="footer">
+		<div class="content">
+			<h4>Footer</h4>
+			<p>
+			We are NOT investment advisors.  See our <a href="terms">Terms</a>.
+			</p>
+			<p><a href="#">Contact Us</a> | <a href="#">Foo</a> | <a href="#">Help</a></p>
+		</div>
+	</div>
 </div>
