--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body onload="handle_hash();">
 
 <%= yield %>
 
