--- a/app/views/users/success.html.erb
+++ b/app/views/users/success.html.erb
@@ -1,9 +1,61 @@
-<div style="margin: 30px">
+<div id="header">
+	<div class="content">
+		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
+			<div id="logo-line-1">msft401k</div>
+			<div id="logo-line-2">by Vest Me</div>			
+		</div>
 
-<p>Get excited, <%= @user.email %>! You're signed up!</p>
+		<div id="navbar">
+			<a id="top-link-signup" href="/">Sign Up</a> |
+			<a id="top-link-returns" href="/#returns">Our Returns</a> |
+			<a id="top-link-how" href="/#how">How It Works</a> |
+			<a id="top-link-what" href="/#what">What Do I Do</a> |
+			<a id="top-link-who" href="/#who">Who We Are</a> |
+			<a id="top-link-vision" href="/#vision">Vision</a>
+		</div>
 
-<p>Next, we'll send you a golden donkey...</p>
+		<script>
+	  	function handle_hash() {
+  			// nothing to do for this page
+  		}
+		$("#navbar a").click(function(event) {
+		  	//event.preventDefault();
+		});
+		</script>
 
-<a href="/">Home</a>
+	</div>
+</div>
 
+<div id="poster">
+	<div class="content">
+		<h1>Congratulations!</h1>
+	</div>
+</div>
+
+<div id="main-terms">
+	<div class="content">
+		<h2>Get excited! You're signed up!!</h2>
+
+		<p>Start now by setting your allocations to this month's blueprint.  Just follow the simple step-by-step instructions below.  And after that, we'll send you new allocation percentages on the 1st of every month.</p>
+
+		<h2>Log In To Fidelity</h2>
+		<div class="chartbox1">Login Screenshot 1</div><br /><br />
+		<div class="chartbox1">Login Screenshot 2</div><br /><br />
+		<div class="chartbox1">Login Screenshot 3</div>
+
+		<h2>Update Your Allocations</h2>
+		<div class="chartbox1">Allocations Update Screenshot 1</div><br /><br />
+		<div class="chartbox1">Allocations Update Screenshot 2</div><br /><br />
+		<div class="chartbox1">Allocations Update Screenshot 3</div>
+	</div>
+
+	<div id="footer">
+		<div class="content">
+			<h4>Footer</h4>
+			<p>
+			We are NOT investment advisors.  See our <a href="terms">Terms</a>.
+			</p>
+			<p><a href="#">Contact Us</a> | <a href="#">Foo</a> | <a href="#">Help</a></p>
+		</div>
+	</div>
 </div>
