Create Step-by-Step Instructions, add Joe's image, and some other minor cleanup

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -153,6 +153,15 @@ body {
 	margin: 0px 55px 0px 0px; 
 }
 
+.two-column-div { 
+	width: 375px; 
+	float: left; 
+}
+
+.two-column-margin { 
+	margin: 0px 50px 0px 0px; 
+}
+
 .picbox { 
 	width: 230px; 
 	height: 230px; 
