--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -110,12 +110,21 @@
 			<p>
 			It's so easy!  Every month, we'll send you our recommendation for asset allocations.  We'll tell you step-by-step how to log into your account and update your 401k account allocations to maximize performance and minimize risk.
 			</p>
-			<p><a href="#">See Step-by-Step Instructions</a></p>
+			<div class="two-column-div two-column-margin">
+				<img src="assets/Rebalance.png" alt="Rebalance" />
+				<br /><span style="font-style: italic; font-size: 80%;">Rebalance</span>
+			</div>
+			<div class="two-column-div">
+				<img src="assets/EnterPercentages.png" alt="Enter Percentages" />
+				<br /><span style="font-style: italic; font-size: 80%;">Enter Percentages</span>
+			</div>
+			<div class="clear-div"></div>
+			<p>See the full <a href="stepbystep">Step-by-Step Instructions</a>.</p>
 		</div>		
 		<div class="main-section" id="section-who">
 			<h2>Who We Are</h2>
 			<div class="three-column-div three-column-margin">
-			<div class="picbox">Joe's Pic</div>
+			<div><img src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
 				<p>
 				Joe is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.
 				</p>
@@ -132,8 +141,9 @@
 				Xavier is an investment guru.  He is a CFA and worked for many years as an analyst building financial models.
 				</p>
 			</div>
+			<div class="clear-div"></div>
 		</div>
-		<div class="main-section clear-div" id="section-vision">
+		<div class="main-section" id="section-vision">
 			<h2>Vision</h2>
 			<p>
 			We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are
@@ -164,11 +174,8 @@ We will give monthly rebalance “blueprints” in the form of an email to all s
 
 	<div id="footer">
 		<div class="content">
-			<h4>Footer</h4>
-			<p>
-			We are NOT investment advisors.  See our <a href="terms">Terms</a>.
-			</p>
-			<p><a href="#">Contact Us</a> | <a href="#">Foo</a> | <a href="#">Help</a></p>
+			<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
+			<p>Questions? <a href="mailto:team@msft401k.com">Contact Us</a>.</p>
 		</div>
 	</div>
 </div>
