--- a/app/views/home/stepbystep.html.erb
+++ b/app/views/home/stepbystep.html.erb
@@ -28,20 +28,12 @@
 
 <div id="poster">
 	<div class="content">
-		<h1>Congratulations!</h1>
+		<h1>Step-by-Step Instructions</h1>
 	</div>
 </div>
 
 <div id="main-terms">
 	<div class="content">
-        <h2>Get excited! You're Signed Up!!</h2>
-
-        <p>You're all set.  We will send you monthly rebalance information to your email: <%= @user.email %>.  Questions?  E-mail us: <a href="mailto:team@msft401k.com">team@msft401k.com</a>.</p>
-
-        <h2>Start Now</h2>
-
-        <p>Start now by setting your allocations to this month's blueprint.  Just follow the simple step-by-step instructions below.</p>
-
 		<h4>Step 1: Log into your Microsoft 401k account at <a href="http://www.401k.com">http://www.401k.com</a>.</h4>
 		<div><img src="assets/stepbystep/Step1.png" alt="Step 1" /></div>
 		<h4>Step 2: If you have multiple relationships with Fidelity, choose Microsoft Benefits.</h4>
@@ -65,12 +57,15 @@
 		<div><img src="assets/stepbystep/Step10.png" alt="Step 10" /></div>
 		<h4>Step 11: You're done!  At the end, you'll see a confirmation page.</h4>
 		<div><img src="assets/stepbystep/Step11.png" alt="Step 11" /></div>
+
+
 	</div>
 
 	<div id="footer">
 		<div class="content">
+			<h4>Footer</h4>
 			<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
-			<p><a href="mailto:team@msft401k.com">Contact Us</a></p>
+			<p>Questions? <a href="mailto:team@msft401k.com">Contact Us</a>.</p>
 		</div>
 	</div>
 </div>
