--- a/app/views/users/alreadysignedup.html.erb
+++ b/app/views/users/alreadysignedup.html.erb
@@ -34,7 +34,7 @@
 
 <div id="main-terms">
 	<div class="content">
-        <h2>Get excited! You're Signed Up!!</h2>
+        <h2>You're Already Signed Up!</h2>
 
         <p>You're all set.  We will send you monthly rebalance information to your email: <%= @user.email %>.  Questions?  E-mail us: <a href="mailto:team@msft401k.com">team@msft401k.com</a>.</p>
 
@@ -70,7 +70,7 @@
 	<div id="footer">
 		<div class="content">
 			<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
-			<p><a href="mailto:team@msft401k.com">Contact Us</a></p>
+			<p>Questions? <a href="mailto:team@msft401k.com">Contact Us</a>.</p>
 		</div>
 	</div>
 </div>
