--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -1,4 +1,5 @@
 <div id="header">
+<div id="header">
 	<div class="content">
 		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
 			<div id="logo-line-1">msft401k</div>
@@ -198,11 +199,8 @@
 
 	<div id="footer">
 		<div class="content">
-			<h4>Footer</h4>
-			<p>
-			We are NOT investment advisors.  See our <a href="terms">Terms</a>.
-			</p>
-			<p><a href="#">Contact Us</a> | <a href="#">Foo</a> | <a href="#">Help</a></p>
+			<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
+			<p>Questions? <a href="mailto:team@msft401k.com">Contact Us</a>.</p>
 		</div>
 	</div>
 </div>
