--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -2,111 +2,43 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <style type="text/css">
-    #main { 
-      background-color: white; 
-      padding: 10px 0px 0px 0px; 
-      width: 100%;
-    }
-
-    #footer { 
-      background-color: #017890; 
-      color: white; 
-      padding: 10px 0px 20px 0px; 
-      margin: 30px 0px 0px 0px;
-      font-size: 85%; 
-    }
-
-    h1 { font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif; font-size: 240%; }
-    h2 { font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 200%; }
-    h3 { font-size: 155%; font-weight: normal; }
-    h3, h4, h5 { font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; }
-
-    .content { 
-      width: 800px; 
-      text-align: left; 
-      margin-left: auto; 
-      margin-right: auto; 
-    }
-
-    .main-section { 
-      padding: 10px 0px; 
-    }
-
-    a {
-      text-decoration: none;
-      color: #88BBFF;
-    }
-
-    a:hover, a:active {
-      color: orange;
-    }
-
-    #navbar {
-      color: #BBBBBB;
-    }
-    </style>
   </head>
-  <body style="width: 800px; font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
-    <table style="background-color: white; font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;">
-      <tr>
-        <td width="150" height="75">
-          <div style="font-size: 30px; font-weight: bold;">msft401k</div>
-          <div style="font-size: 20px;">by Vest Me</div>
-        </td>
+  <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
+    <div id="main">
+      <div class="content">
+        <h2 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 200%;">Get excited! You're Signed Up!!</h2>
 
-        <td width="650">
-          <a id="top-link-signup" href="http://www.msft401k.com/">Sign Up</a> |
-          <a id="top-link-returns" href="http://www.msft401k.com/#returns">Our Returns</a> |
-          <a id="top-link-how" href="http://www.msft401k.com/#how">How It Works</a> |
-          <a id="top-link-what" href="http://www.msft401k.com/#what">What Do I Do</a> |
-          <a id="top-link-who" href="http://www.msft401k.com/#who">Who We Are</a> |
-          <a id="top-link-vision" href="http://www.msft401k.com/#vision">Vision</a>
-        </td>
-      </tr>
-    </table>
+        <p>You're all set.  We will send you monthly rebalance information to your email: <%= @user.email %>.  Questions?  E-mail us: <a href="mailto:team@msft401k.com">team@msft401k.com</a>.</p>
 
-    <table>
-      <tr>
-        <td width="800" height="75" style="background-color: #017890; color: white; padding: 0px 0px 0px 0px;">
-          <h1>Welcome!</h1>
-        </td>
-      </tr>
-    </table>
-
-    <div id="main" style="">
-      <div class="content" style="">
-        <h2>You're Signed Up!</h2>
-
-        <p>You have successfully signed up at msft401k.com.  We will send you monthly rebalance information to your email: <%= @user.email %>.</p>
-
-        <h2>Start Now</h2>
+        <h2 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 200%;">Start Now</h2>
 
         <p>Start now by setting your allocations to this month's blueprint.  Just follow the simple step-by-step instructions below.</p>
 
-        <h2>Log In To Fidelity</h2>
-        <div style="width: 300px; min-height: 200px; background-color: #FFCCAA; text-align: center; display: table-cell; vertical-align: middle; margin: 0px; color: black; padding: 0px 30px;">Login Screenshot 1</div><br /><br />
-        <div style="width: 300px; min-height: 200px; background-color: #FFCCAA; text-align: center; display: table-cell; vertical-align: middle; margin: 0px; color: black; padding: 0px 30px;">Login Screenshot 2</div><br /><br />
-        <div style="width: 300px; min-height: 200px; background-color: #FFCCAA; text-align: center; display: table-cell; vertical-align: middle; margin: 0px; color: black; padding: 0px 30px;">Login Screenshot 3</div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 1: Log into your Microsoft 401k account at <a href="http://www.401k.com">http://www.401k.com</a>.</h4>
+        <div><img src="assets/stepbystep/Step1.png" alt="Step 1" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 2: If you have multiple relationships with Fidelity, choose Microsoft Benefits.</h4>
+        <div><img src="assets/stepbystep/Step2.png" alt="Step 2" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 3: Select your Microsoft 401k Plan account.</h4>
+        <div><img src="assets/stepbystep/Step3.png" alt="Step 3" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 4: On the account summary page, click 'Change Investments' in the menu on the left.</h4>
+        <div><img src="assets/stepbystep/Step4.png" alt="Step 4" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 5: Click 'Rebalance.'</h4>
+        <div><img src="assets/stepbystep/Step5.png" alt="Step 5" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 6: Click 'Start Your Rebalance.'</h4>
+        <div><img src="assets/stepbystep/Step6.png" alt="Step 6" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 7: Enter your rebalance percentages and click 'Begin Rebalance.'</h4>
+        <p>Look for the email from team@msft401k.com at the end of every month.  In the email, you will see our recommended asset allocation for the Microsoft 401k Plan.</p>
+        <div><img src="assets/stepbystep/Step7.png" alt="Step 7" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 8: Choose 'Rebalance my account now, one time' and click 'Next.'</h4>
+        <div><img src="assets/stepbystep/Step8.png" alt="Step 8" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 9: Read the electronic prospectus for any new investments and click 'Continue.'</h4>
+        <div><img src="assets/stepbystep/Step9.png" alt="Step 9" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 10: Review the percentages and click 'Submit.'</h4>
+        <div><img src="assets/stepbystep/Step10.png" alt="Step 10" /></div>
+        <h4 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif;">Step 11: You're done!  At the end, you'll see a confirmation page.</h4>
+        <div><img src="assets/stepbystep/Step11.png" alt="Step 11" /></div>
 
-        <h2>Update Your Allocations</h2>
-        <div style="width: 300px; min-height: 200px; background-color: #FFCCAA; text-align: center; display: table-cell; vertical-align: middle; margin: 0px; color: black; padding: 0px 30px;">Allocations Update Screenshot 1</div><br /><br />
-        <div style="width: 300px; min-height: 200px; background-color: #FFCCAA; text-align: center; display: table-cell; vertical-align: middle; margin: 0px; color: black; padding: 0px 30px;">Allocations Update Screenshot 2</div><br /><br />
-        <div style="width: 300px; min-height: 200px; background-color: #FFCCAA; text-align: center; display: table-cell; vertical-align: middle; margin: 0px; color: black; padding: 0px 30px;">Allocations Update Screenshot 3</div>
-
-      </div>
-
-      <div id="footer" style="">
-        <div class="content" style="">
-          <h4>Footer</h4>
-          <p>
-          We are NOT investment advisors.  See our <a href="http://www.msft401k.com/terms">Terms</a>.
-          </p>
-          <p><a href="#">Contact Us</a> | <a href="#">Foo</a> | <a href="#">Help</a></p>
-        </div>
       </div>
     </div>
-
-
   </body>
 </html>
